--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,9 @@
      margin: 0; 
      padding: 0; 
 }
+html {
+    scroll-behavior: smooth;
+}
 a {
     color: inherit;
     text-decoration: none;
@@ -9,14 +12,15 @@ a {
 
 .main-header {
     display: flex;
-    height: 80px;
+    height: 5vh;
     flex-direction: row;
     justify-content: space-between;
     align-content: center;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     box-shadow: 0 10px 15px -2px gray;
     position: relative;
     z-index: 10;
+    background-color: rgba(246,246,246,255);
 }
 
 
@@ -25,6 +29,7 @@ a {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    width: 50%;
 }
 .logo-container {
     display: flex;
@@ -34,30 +39,8 @@ a {
     flex-wrap: wrap;
 }
 .logo-container img {
-    width: 64px;
-}
-.logo-title {
-    font-family: "Poiret One", serif;
-    font-weight: 800;
-    font-size: 2em;
-    line-height: 1.047;
-    text-transform: none;
-    margin-left: 10px;
-}
-.logo-subtitle {
-    font-family: "Poiret One", serif;
-    font-weight: 500;
-    font-size: 1.5em;
-    text-align: center;
-    color: #000;
-    margin-left: 10px;
-}
-.logo-text {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
-    flex-wrap: wrap;
+    width: 200px;
+    height: auto;
 }
 
 .right-side {
@@ -65,6 +48,7 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    width: 50%;
 }
 
 .right-side ul {
@@ -77,10 +61,17 @@ a {
 }
 
 .right-side li {
-    padding-left: calc(1.2em / 2);
-    padding-right: calc(1.2em / 2);
+    padding-left: calc(1.9em / 2);
+    padding-right: calc(1.9em / 2);
     padding-top: 0.6em;
     padding-bottom: 0.6em;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    font-size: larger;
+}
+li:hover {
+    background-color: #dad9d9;
+    border-radius: 5px;
 }
 
 .content-wrap {
@@ -90,7 +81,7 @@ a {
     justify-content: center;
     align-content: center;
     flex-wrap: wrap;
-
+    min-height: 89vh;
 }
 
 .content {
@@ -99,13 +90,12 @@ a {
     justify-content: center;
     align-content: center;
     flex-wrap: nowrap;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
+    padding-top: 4rem;
+    padding-bottom: 3rem;
     width: 100%;
     max-width: 1242px;
     background-color: white;
+    min-height: 85vh;
 }
 
 .interduciton {
@@ -127,6 +117,7 @@ a {
 .left-text p {
     margin-top: 15px;
     font-size: 20px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .signature {
@@ -203,18 +194,106 @@ a {
     max-width: 100%;
 }
 
+/* Review Section */
+
 .review {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
-    flex-wrap: wrap;
+    display: grid;
+    gap: 20px;
+    grid-auto-flow: column;
+    grid-auto-columns: 32%;
     margin-top: 20px;
+    padding-bottom: 10px;
+    position: relative;
+    overflow-x: auto; /* Enable horizontal scrolling */
+    overscroll-behavior-inline: contain; /* Hide vertical overflow */
+    scrollbar-width: none; /* For Firefox */
+    -ms-overflow-style: none;  /* For Internet Explorer and Edge */
 }
 
-.elfsight-app-ec6621f7-1150-4c60-85ea-c22bcc914b9d {
-    max-width: 90%;
+.review::-webkit-scrollbar {
+    display: none; /* For Chrome, Safari, and Opera */
 }
+
+.snap-inline {
+    scroll-snap-type: inline mandatory;
+    scroll-padding-inline: 5px;
+}
+
+.snap-inline > * {
+    scroll-snap-align: start;
+}
+
+.review-card {
+    display: inline-flex; /* Change to inline-flex */
+    flex-direction: column;
+    justify-content: center;
+    align-content: start;
+    flex-wrap: nowrap;
+    width: 310px;
+    height: 150px;
+    margin-top: 20px;
+    margin-left: 15px;
+    padding: 20px;
+    border: 1px solid #f8f9fa;
+    border-radius: 5px;
+    background-color: whitesmoke;
+}
+
+.review-card-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-content: center;
+    flex-wrap: nowrap;
+}
+
+.review-card-details {
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-content: flex-start;
+    flex-wrap: wrap;
+}
+
+.review-card-name {
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    width: 240px;
+    height: 20px;
+    margin-left: 5px;
+}
+
+.review-card-date {
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
+    color: gray;
+    width: 240px;
+    height: 20px;
+    margin-left: 5px;
+}
+
+.review-card-header img {
+    width: 40px;
+    height: 40px;
+}
+
+.review-card-stars {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.review-card-stars img {
+    width: 20px;
+    height: auto;
+}
+
+.review-card-text {
+    font-family: 'Roboto', sans-serif;;
+}
+/* Footer */
 
 footer {
     display: flex;
@@ -227,4 +306,253 @@ footer {
     box-shadow: 0 -10px 15px -2px gray;
     position: relative;
     z-index: 10;
+    height: 2vh;
+}
+
+.review-container {
+    display: flex;
+    align-items: center;
+}
+
+#left-button, #right-button {
+    background-color: #f8f9fa00;
+    padding: 10px;
+    cursor: pointer;
+}
+
+#left-button {
+    transform: rotate(180deg);
+}
+
+#left-button:hover{
+    transform: scale(2) rotate(180deg);
+}
+#right-button:hover {
+    transform: scale(2);
+}
+
+.review-google-text {
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    text-align: center;
+}
+.ham {
+    display: none;
+}
+.cross {
+    display: none;
+}
+
+.contact {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: stretch;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 100%;
+}
+.contact-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 15px;
+    max-width: 51%;
+}
+.contact-right img {
+    width: 100%;
+    height: auto;
+}
+.contact-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    max-width: 400px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+}
+.contact-header {
+    align-self: center;
+    margin-bottom: 20px;
+}
+.contact-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    max-width: 400px;
+}
+.contact-details img {
+    width: 60px;
+    margin-bottom: 10px;
+    height: 50px;
+    align-self: center;
+}
+@media screen and (max-width: 1100px) {
+    .main-header {
+        flex-direction: row;
+        height: auto;
+    }
+    .ham {
+        align-self: end;
+        display: block;
+    }
+    .ham img {
+        display: block;
+        width: 30px;
+        height: 30px;
+        margin: 10px;
+    }
+    .cross {
+        align-self: end;
+        display: none;
+    }
+    .cross img {
+        display: block;
+        width: 40px;
+        height: 40px;
+        margin: 10px;
+    }
+    .interduciton {
+        flex-direction: column;
+        margin: 0px 5%;
+    }
+    .left-side {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        justify-content: space-between;
+    }
+    .logo-container {
+        justify-content: flex-start;
+    }
+    .logo-container img {
+        margin-left: 40px;
+    }
+    .right-side {
+        display: flex; 
+        margin-right: 0;
+        width: 100%;
+    }
+
+    .right-side ul {
+        display: none; /*flex toggle*/
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 0;
+        padding: 0;
+    }
+    .right-side li {
+        margin: 1rem 1rem;
+        padding: 0;
+    }
+
+    .right-image img {
+        width: 100%;
+        margin-left: 0;
+    }
+
+    .left-text {
+        width: 100%;
+        margin-right: 0;
+    }
+
+    .right-image img {
+        width: 100%;
+        margin-left: 0;
+    }
+
+    .logos {
+        flex-direction: column;
+    }
+
+    .main-logo img {
+        width: 100%;
+    }
+
+    .side-logos img {
+        width: 100%;
+        margin: 10px;
+    }
+
+    .review {
+        grid-auto-columns: 100%;
+    }
+
+    .review-card {
+        width: 90%;
+        max-width: 900px;
+    }
+
+    .review-card-header img {
+        width: 30px;
+        height: 30px;
+    }
+
+    .review-card-stars img {
+        width: 15px;
+    }
+
+    .review-card-name {
+        width: 300px;
+    }
+
+    .review-card-date {
+        width: 300px;
+    }
+
+    .review-card-text {
+        font-size: 14px;
+    }
+
+    footer {
+        flex-direction: column;
+    }
+
+    #left-button, #right-button {
+        padding: 5px;
+    }
+
+    .review-google-text {
+        font-size: 14px;
+    }
+    .logos {
+        padding: 0px 20px;
+    }
+    .logos img {
+        max-width: 150px;
+        height: auto;
+    }
+    .main-logo img {
+        max-width: 300px;
+        width: 100%;
+        height: auto;
+    }
+    #sign_1 {
+        width: calc(157px * 0.8);
+        height: calc(72px * 0.8);
+    }
+    #sign_2 {
+        width: calc(260px * 0.8);
+        height: calc(84px * 0.8);
+    }
+    #right-button, #left-button {
+        display: none;
+    }
+}
+@media screen and (max-width: 400px) {
+    .review-card-name {
+        width: 200px;
+    }
+
+    .review-card-date {
+        width: 200px;
+    }
+    .logos img {
+        max-width: 120px;
+        height: auto;
+    }
 }
