--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@ a {
 .main-header {
     display: flex;
     height: 5vh;
+    min-height: 64px;
     flex-direction: row;
     justify-content: space-between;
     align-content: center;
@@ -226,7 +227,7 @@ li:hover {
 .review-card {
     display: inline-flex; /* Change to inline-flex */
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-content: start;
     flex-wrap: nowrap;
     width: 310px;
@@ -237,6 +238,7 @@ li:hover {
     border: 1px solid #f8f9fa;
     border-radius: 5px;
     background-color: whitesmoke;
+    font-size: 14px
 }
 
 .review-card-header {
@@ -347,48 +349,71 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: stretch;
+    align-items: flex-start;
     margin-top: 20px;
     margin-bottom: 20px;
     width: 100%;
+    flex-wrap: wrap;
+    align-content: flex-start;
 }
+
 .contact-right {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-left: 15px;
-    max-width: 51%;
+    width: 80%;
+    height: 350px;
+    max-width: 600px;
 }
-.contact-right img {
-    width: 100%;
-    height: auto;
-}
+
 .contact-left {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    max-width: 400px;
+    align-items: left;
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
+    margin-bottom: 30px;
 }
 .contact-header {
-    align-self: center;
+    align-self: flex-start;
     margin-bottom: 20px;
+    margin-left: 17px;
+    font-size: 22px;
+}
+.contact-address, .contact-phone, .contact-email, .contact-parking {
+    display: flex;
+    align-content: center;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 10px;
 }
 .contact-details {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10px;
-    max-width: 400px;
+    justify-content: flex-start;
+    align-items: left;
 }
 .contact-details img {
-    width: 60px;
-    margin-bottom: 10px;
-    height: 50px;
-    align-self: center;
+    width: 25px;
+    height: 25px;
+    align-self: left;
+    margin-left: 20px;
+    margin-right: 10px;
+}
+.contact-house {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 75%;
+}
+.contact-house img {
+        max-width: 100%;
+        width: 100%;
+        height: 500px;
+        object-fit: cover;
 }
 @media screen and (max-width: 1100px) {
     .main-header {
