--- a/css/styles.css
+++ b/css/styles.css
@@ -120,6 +120,10 @@ li:hover {
     font-size: 20px;
     font-family: 'Roboto', sans-serif;
 }
+.left-text h2 {
+    margin-top: 15px;
+    font-family: 'Roboto', sans-serif;
+}
 
 .signature {
     display: flex;
@@ -154,7 +158,7 @@ li:hover {
 }
 
 .right-image img {
-    width: 500px;
+    width: 400px;
     height: auto;
     margin-left: 3%;
 }
@@ -164,8 +168,10 @@ li:hover {
     flex-direction: row;
     justify-content: center;
     align-content: center;
-    flex-wrap: nowrap;
+    /* flex-wrap: nowrap; */
     margin-top: 20px;
+    width: 80%;
+    align-self: center;
 }
 
 .main-logo {
@@ -177,7 +183,8 @@ li:hover {
 }
 
 .main-logo img {
-    width: 81%;
+    width: 100%;
+    max-width: 700px;
     height: auto;
 }
 
@@ -581,3 +588,44 @@ footer {
         height: auto;
     }
 }
+table {
+    border-collapse: collapse;
+    border: 2px solid rgb(140 140 140);
+    font-family: sans-serif;
+    font-size: 0.8rem;
+    letter-spacing: 1px;
+  }
+  
+  caption {
+    caption-side: bottom;
+    padding: 10px;
+    font-weight: bold;
+  }
+  
+  thead,
+  tfoot {
+    background-color: rgb(228 240 245);
+  }
+  
+  th,
+  td {
+    border: 1px solid rgb(160 160 160);
+    padding: 8px 10px;
+  }
+  
+  td:last-of-type {
+    text-align: center;
+  }
+  
+  tbody > tr:nth-of-type(even) {
+    background-color: rgb(237 238 242);
+  }
+  
+  tfoot th {
+    text-align: right;
+  }
+  
+  tfoot td {
+    font-weight: bold;
+  }
+  
