--- a/css/styles.css
+++ b/css/styles.css
@@ -214,7 +214,7 @@ li:hover {
 }
 .review {
     display: grid;
-    gap: 20px;
+    gap: clamp(7px, 10vw, 20px);
     grid-auto-flow: column;
     grid-auto-columns: 32%;
     margin-top: 5px;
@@ -381,9 +381,10 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 48vw;
     height: 350px;
     max-width: 600px;
+    min-width: 490px;
 }
 
 .contact-left {
@@ -510,7 +511,8 @@ table {
     align-self: center;
     width: 90%;
   }
-@media screen and (max-width: 1024px) {
+
+@media screen and (max-width: 970px) {
     .main-header {
         flex-direction: row;
         height: auto;
@@ -616,8 +618,8 @@ table {
     }
 
     .review-card {
-        width: 90%;
-        max-width: 900px;
+        width: 95vw;
+        max-width: 950px;
     }
 
     .review-card-header img {
