--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,7 @@ li:hover {
     min-height: 85vh;
 }
 
-.introduciton {
+.introduction {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
